--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,9 +30,11 @@
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "vercel-build": "npm install --legacy-peer-deps && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
