--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,8 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "gpxparser": "^3.0.8",
-    "i18next": "^24.2.3",
-    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next": "22.4.15",
+    "i18next-browser-languagedetector": "^7.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.471.1",
     "mapbox-gl": "^3.10.0",
@@ -22,7 +22,7 @@
     "papaparse": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^15.4.1",
+    "react-i18next": "^12.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
