Your commit message describing the changes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "https://smartappkeys.onrender.com",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -13,8 +13,8 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "gpxparser": "^3.0.8",
-    "i18next": "^24.2.3",
-    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next": "22.4.15",
+    "i18next-browser-languagedetector": "^7.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.471.1",
     "mapbox-gl": "^3.10.0",
@@ -22,12 +22,13 @@
     "papaparse": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^15.4.1",
+    "react-i18next": "^12.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
     "tailwindcss": "^3.4.17",
+    "typescript": "4.9.5",
     "web-vitals": "^4.2.4"
   },
   
